# conda-build-test

./: README.md  build_conda_package.bat  meta.yaml  setup.cfg  setup.py
.github/workflows/: build.yaml  build.yml  release-vars.sh  release.yml
conda_build/recipe/: meta.yaml
hello/: __init__.py
recipe/: conda_build.config.yaml  conda_build_config.yaml  meta.yaml
