[metadata]
name = conda-build-test
version = 0.1.0
description = Test module for building conda packages
long_description = Test module for building conda packages
author = Chris Billington
author_email = chrisjbillington@gmail.com
url = http://github.com/chrisjbillington/conda-build-test
keywords = test
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
