[metadata]
name = hello
version = 0.1.0
description = Test module for building conda packages
long_description = Test module for building conda packages
author = Chris Billington
author_email = chrisjbillington@gmail.com
url = http://github.com/chrisjbillington/conda-build-test
keywords = test
license = BSD

[options]
zip_safe = False
include_package_data = True
packages = find:
